# sentinel-ai

./: .gitignore  CHANGELOG.md  README.md  apply_patches.sh  docker-compose.yml
sentinel-ai/backend/: Dockerfile  pyproject.toml
sentinel-ai/backend/app/: main.py
sentinel-ai/backend/app/ai/api/: routes.py  schemas.py
sentinel-ai/backend/app/api/v1/: router.py
sentinel-ai/backend/app/shared/: api_response.py
sentinel-ai/backend/app/workflows/: investigation_workflow_service.py
sentinel-ai/backend/migrations/: env.py
sentinel-ai/backend/migrations/versions/: 0001_initial_platform_tables.py  0010_investigation_persistence.py  0020_normalized_quartz_ingestion.py
sentinel-ai/backend/tests/: test_connector_sync_service.py  test_quartz_mapper.py
sentinel-ai/backend/tests/api/: test_health.py
sentinel-ai/backend/tests/investigations/: test_investigation_case_service.py
sentinel-ai/backend/tests/rules/: test_activity_rules.py  test_rule_engine.py  test_session_rules.py
sentinel-ai/backend/tests/scans/: test_scan_pipeline_service.py
sentinel-ai/backend/tests/scoring/: test_risk_level.py  test_risk_scorer.py
sentinel-ai/backend/tests/security/: test_audit_log_service.py  test_authorization_service.py  test_password_service.py  test_permission_route_dependency.py  test_token_service.py
sentinel-ai/backend/tests/sso/: test_provider_factory.py
sentinel-ai/backend/tests/timeline/: test_activity_snapshot_mapper.py  test_timeline_builder.py  test_timeline_comparator.py
sentinel-ai/backend/tests/workflows/: test_investigation_workflow_service.py
(+419 files in other folders)
