[project]
name = "sentinel-ai-backend"
version = "0.1.0"
description = "Sentinel AI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "orjson>=3.10.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "ruff>=0.5.7",
    "black>=24.8.0",
    "mypy>=1.11.1",
    "bandit>=1.7.9",
    "safety>=3.2.7",
    "pre-commit>=3.8.0"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
